# ml-ops

./: .gitignore  README.md  flake.nix  pyproject.toml
ml_ops/: training.py
