[tool.poetry]
name = "ml-ops"
version = "0.1.0"
description = "ML model life cycle"
authors = ["Klaasjan Maas <klaasjan.maas@outlook.com>", "ali aledhari <aaledhari@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.9.1"
scikit-learn = "^1.3.2"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
train = "ml_ops.training:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
