[tool.poetry]
name = "ml-ops"
version = "0.1.0"
description = "ML model life cycle"
authors = ["Klaasjan Maas <klaasjan.maas@outlook.com>", "ali aledhari <aaledhari@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
tensorflow-datasets = "^4.9.3"
tensorflow = {version = ">=2.10", extras = ["and-cuda"]}
matplotlib = "^3.8.2"
mlflow = "^2.9.2"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
train = "ml_ops.training:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
